# WebAppMedicalHousemanHTPN

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: backup.yml  lint.yml
.streamlit/: config.toml  secrets.toml.example
infrastructure/: README.md  create_budget_alarm.py  create_tables.py  iam_policy.json
lib/: auth.py  constants.py  db.py  models.py  presence.py  viz.py
pages/: 1_HO_Stats.py  2_Login.py  3_Edit_Roster.py  4_Kanban_View.py  5_Officers.py  6_Master_Data.py  7_Admins.py  8_Activity.py
scripts/: backup_to_s3.py  import_from_gsheet.py  restore_from_s3.py  seed_shifts.py
tests/: test_auth.py  test_db.py  test_viz.py
