[project]
name = "htpn-roster"
version = "0.1.0"
description = "Hospital Tengku Permaisuri Norashikin Medical Department House Officer Roster web app"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit[auth]>=1.42",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-elements>=0.1.0",
    "streamlit-sortables>=0.3.1",
    "boto3>=1.34",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "authlib>=1.3.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "moto>=5.0",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
